# sing-box-qt

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  build.ps1  pack.ps1  tmp_setup_block.cpp
.github/workflows/: ci.yml  release-on-version-bump.yml
docs/guide/: qt-widgets-file-splitting-checklist.md
resources/: resources.qrc
resources/styles/: card_common.qss  connections_view.qss  global.qss  home_view.qss  log_view.qss  main_window.qss  proxy_view.qss  rules_view.qss  settings_view.qss  subscription_card.qss  subscription_view.qss
src/: .clang-format  main.cpp
src/app/: AppBootstrapper.cpp  AppBootstrapper.h  AppContext.cpp  AppContext.h  ConfigProvider.cpp  ConfigProvider.h  MainWindow.cpp  MainWindow.h  ProxyRuntimeController.cpp  ProxyRuntimeController.h  ProxyUiController.cpp  ProxyUiController.h  ThemeProvider.cpp  ThemeProvider.h  TrayIcon.cpp  TrayIcon.h
src/app/impl/: AdminActionsAdapter.cpp  AdminActionsAdapter.h  ConfigRepositoryAdapter.cpp  ConfigRepositoryAdapter.h  SettingsStoreAdapter.cpp  SettingsStoreAdapter.h  SystemProxyAdapter.cpp  SystemProxyAdapter.h  ThemeServiceAdapter.cpp  ThemeServiceAdapter.h
src/app/interfaces/: AdminActions.h  ConfigRepository.h  SettingsStore.h  SystemProxyGateway.h  ThemeService.h
src/core/: CoreManagerClient.cpp  CoreManagerClient.h  CoreManagerProtocol.h  DataUsageTracker.cpp  DataUsageTracker.h  DelayTestService.cpp  DelayTestService.h  KernelService.cpp  KernelService.h  ProcessManager.cpp  ProcessManager.h  ProxyController.cpp  ProxyController.h  ProxyService.cpp  ProxyService.h
src/coremanager/: CoreManagerMain.cpp  CoreManagerServer.cpp  CoreManagerServer.h  KernelRunner.cpp  KernelRunner.h  RuntimeConfigResolver.cpp  RuntimeConfigResolver.h
src/dialogs/: ConfigEditDialog.cpp  ConfigEditDialog.h  ManageRuleSetsDialog.cpp  ManageRuleSetsDialog.h  NodeEditDialog.cpp  NodeEditDialog.h  RuleEditorDialog.cpp  RuleEditorDialog.h  SubscriptionFormDialog.cpp  SubscriptionFormDialog.h
src/dialogs/config/: ConfigEditDialog.cpp  ConfigEditDialog.h
src/dialogs/editors/: GenericNodeEditor.cpp  GenericNodeEditor.h  NodeEditor.h
src/dialogs/rules/: ManageRuleSetsDialog.cpp  ManageRuleSetsDialog.h  RuleEditorDialog.cpp  RuleEditorDialog.h
src/dialogs/subscription/: NodeEditDialog.cpp  NodeEditDialog.h  SubscriptionFormDialog.cpp  SubscriptionFormDialog.h
src/models/: RuleItem.h  SettingsModel.cpp  SettingsModel.h
src/network/: HttpClient.cpp  HttpClient.h  SubscriptionService.cpp  SubscriptionService.h  WebSocketClient.cpp  WebSocketClient.h
src/services/: ConfigBuilder.cpp  ConfigBuilder.h  ConfigManager.cpp  ConfigManager.h  ConfigMutator.cpp  ConfigMutator.h  KernelManager.cpp  KernelPlatform.cpp  RuleConfigService.cpp  RuleConfigService.h  SettingsService.cpp  SettingsService.h  SharedRulesStore.cpp  SharedRulesStore.h
src/services/config/: ConfigBuilder.cpp  ConfigBuilder.h  ConfigManager.cpp  ConfigManager.h  ConfigMutator.cpp  ConfigMutator.h
src/services/kernel/: KernelManager.cpp  KernelManager.h  KernelPlatform.cpp  KernelPlatform.h
src/services/rules/: RuleConfigService.cpp  RuleConfigService.h  SharedRulesStore.cpp  SharedRulesStore.h
src/services/settings/: SettingsService.cpp  SettingsService.h
src/services/subscription/: SubscriptionParser.cpp  SubscriptionParser.h
src/storage/: AppSettings.cpp  AppSettings.h  ConfigConstants.h  ConfigIO.cpp  ConfigIO.h  ConfigManager.cpp  ConfigManager.h  DatabaseService.cpp  DatabaseService.h  SubscriptionConfigStore.cpp  SubscriptionConfigStore.h
src/system/: AdminHelper.cpp  AdminHelper.h  AutoStart.cpp  AutoStart.h  CoreService.cpp  CoreService.h  SingleInstanceGuard.cpp  SingleInstanceGuard.h  SystemProxy.cpp  SystemProxy.h  UpdateService.cpp  UpdateService.h
src/utils/: AppPaths.h  Crypto.cpp  Crypto.h  GitHubMirror.h  LogParser.cpp  LogParser.h  Logger.cpp  Logger.h  PortableMode.cpp  PortableMode.h  RuleUtils.cpp  SubscriptionFormat.cpp  SubscriptionFormat.h  SubscriptionUserinfo.cpp  ThemeManager.cpp  ThemeManager.h
src/utils/home/: HomeFormat.cpp  HomeFormat.h
src/utils/layout/: CardGridAnimation.cpp  CardGridAnimation.h  CardGridLayoutHelper.cpp  CardGridLayoutHelper.h
src/utils/proxy/: ProxyActions.cpp  ProxyActions.h  ProxyNodeHelper.cpp  ProxyNodeHelper.h
src/utils/rule/: RuleUtils.cpp  RuleUtils.h
src/utils/settings/: SettingsHelpers.cpp  SettingsHelpers.h
src/utils/subscription/: SubscriptionActions.cpp  SubscriptionActions.h  SubscriptionAnimation.cpp  SubscriptionAnimation.h  SubscriptionFormat.cpp  SubscriptionFormat.h  SubscriptionHelpers.cpp  SubscriptionHelpers.h  SubscriptionLayoutHelper.cpp  SubscriptionLayoutHelper.h  SubscriptionUserinfo.cpp  SubscriptionUserinfo.h
src/views/: ConnectionsView.cpp  ConnectionsView.h  HomeView.cpp  HomeView.h  LogView.cpp  LogView.h  ProxyView.cpp  ProxyView.h  RulesView.cpp  RulesView.h  SettingsView.cpp  SettingsView.h  SubscriptionView.cpp  SubscriptionView.h
src/views/components/: DataUsageBar.cpp  DataUsageBar.h  DataUsageCard.cpp  DataUsageCard.h  ProxyModeSection.cpp  ProxyModeSection.h  ProxyToolbar.cpp  ProxyToolbar.h  ProxyTreePanel.cpp  ProxyTreePanel.h  StatCard.cpp  StatCard.h  TrafficChart.cpp  TrafficChart.h
src/views/connections/: ConnectionsView.cpp  ConnectionsView.h
src/views/home/: HomeView.cpp  HomeView.h
src/views/logs/: LogView.cpp  LogView.h
src/views/proxy/: ProxyTreePresenter.cpp  (+7 more)
src/widgets/: ChevronToggle.cpp  LogRowWidget.cpp  LogRowWidget.h  MenuComboBox.cpp  MenuComboBox.h  RoundedMenu.cpp  RoundedMenu.h  RuleCard.cpp  RuleCard.h  ToggleSwitch.cpp
test/: CMakeLists.txt  asan_test.cpp  build.ps1  main.cpp  unit_test_shared.h  unit_tests_main.cpp  unit_utils_test.cpp
test/config/: config_builder_test.cpp  config_mutator_test.cpp
test/subscription/: subscription_parser_advanced_test.cpp  subscription_parser_basic_test.cpp  subscription_service_test.cpp
test/utils/: format_and_proxy_test.cpp  log_and_subscription_meta_test.cpp  misc_services_test.cpp  rule_and_ruleconfig_test.cpp
(+54 files in other folders)
